[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/Game.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Rock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Alien.tscn" type="PackedScene" id=4]
[ext_resource path="res://FX/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Audio/music_background.wav" type="AudioStream" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
playerScene = ExtResource( 2 )
rockScene = ExtResource( 3 )
alienScene = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 800 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="start_game" from="UI" to="." method="_on_UI_start_game"]
